--- a/PAM/Views/Shared/_ProgressBar.cshtml
+++ b/PAM/Views/Shared/_ProgressBar.cshtml
@@ -2,7 +2,15 @@
 <hr>
 <div class="progressbar-container">
   <ul class="progressbar">
-
+    <li class="step">Self or For</li>
+    <li class="step">Requester(s) Information</li>
+    <li class="step">Request Type</li>
+    <li class="step">Unit Selection</li>
+    <li class="step">System Selection</li>
+    <li class="step">Request Information</li>
+    <li class="step">Supervisors</li>
+    <li class="step">Review</li>
+    <!--
     <li class="step"><a asp-action="CreateRequester">Self or For</a></li>
     <li class="step"><a asp-action="RequesterInfo">Requester(s) Information</a></li>
     <li class="step"><a asp-action="RequestType">Request Type</a></li>
@@ -11,6 +19,7 @@
     <li class="step"><a asp-action="RequestInfo">Request Information</a></li>
     <li class="step"><a asp-action="Supervisors">Supervisors</a></li>
     <li class="step"><a asp-action="Review">Review</a></li>
+    -->
   </ul>
 </div>
 <hr>
