small changes to request tables

--- a/PAM/Views/Request/Self.cshtml
+++ b/PAM/Views/Request/Self.cshtml
@@ -26,6 +26,7 @@
         <thead class="table-info">
           <tr>
             <th scope="col">Id</th>
+            <th scope="col">Submitted By</th>
             <th scope="col">Type</th>
             <th scope="col">Submitted On</th>
             <th scope="col">Status</th>
@@ -39,6 +40,7 @@
             {
               <tr>
                 <td>@request.RequestId</td>
+                <td>@request.Name</td>
                 <td>@request.RequestType.DisplayCode</td>
                 <td>@request.SubmittedOn</td>
                 <td>@request.RequestStatus</td>
@@ -58,6 +60,7 @@
         <thead class="table-info">
           <tr>
             <th scope="col">Id</th>
+            <th scope="col">Submitted By</th>
             <th scope="col">Type</th>
             <th scope="col">Submitted On</th>
             <th scope="col">Status</th>
@@ -71,6 +74,7 @@
             {
               <tr>
                 <td>@request.RequestId</td>
+                <td>@request.Name</td>
                 <td>@request.RequestType.DisplayCode</td>
                 <td>@request.SubmittedOn</td>
                 <td>@request.RequestStatus</td>
@@ -90,6 +94,7 @@
         <thead class="table-info">
           <tr>
             <th scope="col">Id</th>
+            <th scope="col">Submitted By</th>
             <th scope="col">Type</th>
             <th scope="col">Submitted On</th>
             <th scope="col">Status</th>
@@ -103,6 +108,7 @@
             {
               <tr>
                 <td>@request.RequestId</td>
+                <td>@request.Name</td>
                 <td>@request.RequestType.DisplayCode</td>
                 <td>@request.SubmittedOn</td>
                 <td>@request.RequestStatus</td>
