--- a/PAM/Views/Request/ReviewRequests.cshtml
+++ b/PAM/Views/Request/ReviewRequests.cshtml
@@ -15,9 +15,6 @@
     <li class="nav-item">
       <a class="nav-link" data-toggle="tab" href="#completed">Completed</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" href="#drafts">Drafts</a>
-    </li>
   </ul>
 
   <div id="myTabContent" class="tab-content">
@@ -27,7 +24,7 @@
           <tr>
             <th scope="col">Id</th>
             <th scope="col">Submitted By</th>
-            <th scope="col">Type</th>
+            @*<th scope="col">Type</th>*@
             <th scope="col">Submitted On</th>
             <th scope="col">Status</th>
             <th scope="col">Action</th>
@@ -54,7 +51,7 @@
         </tbody>
       </table>
     </div>
-    <div id="completed" class="tab-pane fade">
+    @*<div id="completed" class="tab-pane fade">
       <table class="table table-hover table-responsive-xl">
         <thead class="table-info">
           <tr>
@@ -67,7 +64,7 @@
           </tr>
         </thead>
         <tbody>
-          @*@foreach (var request in (List<Request>)ViewData["requests"])
+          @foreach (var request in (List<Request>)ViewData["requests"])
           {
             <tr>
               <td>@request.RequestId</td>
@@ -81,43 +78,9 @@
                 <a asp-action="Delete" asp-route-id="@request.RequestId">Delete</a>
               </td>
             </tr>
-          }*@
+          }
         </tbody>
       </table>
-    </div>
-    <div id="drafts" class="tab-pane fade">
-      <table class="table table-hover table-responsive-xl">
-        <thead class="table-info">
-          <tr>
-            <th scope="col">Id</th>
-            <th scope="col">Submitted By</th>
-            <th scope="col">Type</th>
-            <th scope="col">Submitted On</th>
-            <th scope="col">Status</th>
-            <th scope="col">Action</th>
-          </tr>
-        </thead>
-        <tbody>
-          @*@foreach (var request in (List<Request>)ViewData["requests"])
-          {
-            @if (request.RequestStatus == RequestStatus.Draft)
-            {
-              <tr>
-                <td>@request.RequestId</td>
-                <td>@request.Name</td>
-                <td>@request.RequestType.DisplayCode</td>
-                <td>@request.SubmittedOn</td>
-                <td>@request.RequestStatus</td>
-                <td>
-                  <a asp-action="View">View</a> |
-                  <a asp-action="Edit">Edit</a> |
-                  <a asp-action="Delete" asp-route-id="@request.RequestId">Delete</a>
-                </td>
-              </tr>
-            }
-          }*@
-        </tbody>
-      </table>
-    </div>
+    </div>*@
   </div>
 </body>
