Routed from clicking View to ViewRequest method

--- a/PAM/Views/Request/ReviewRequests.cshtml
+++ b/PAM/Views/Request/ReviewRequests.cshtml
@@ -42,7 +42,7 @@
                 <td>@request.Request.SubmittedOn</td>
                 <td>@request.Request.RequestStatus</td>
                 <td>
-                  <a asp-action="View">View</a> |
+                  <a asp-action="ViewRequest">View</a>
                   @*<a asp-action="Delete" asp-route-id="@request.RequestId">Delete</a>*@
                 </td>
               </tr>
