--- a/PAM/Views/Request/ReviewRequests.cshtml
+++ b/PAM/Views/Request/ReviewRequests.cshtml
@@ -18,7 +18,7 @@
 
   <div id="myTabContent" class="tab-content">
     <div id="review" class="tab-pane fade show active">
-      <form asp-controller="Request" asp-action="ViewRequest" method="get">
+      <form asp-controller="Request" asp-action="RequestForReview" method="get">
         <table class="table table-hover table-responsive-xl">
           <thead class="table-info">
             <tr>
